<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@color/signup_bgcolor"
    >
    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Signup_text"
        android:layout_marginTop="100dp"
        android:textSize="35dp"
        android:textColor="@color/login_input_color"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signup_text"
        android:text="@string/Sign_up_text"
        android:layout_marginTop="11dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/Full_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Signup_name"
        android:backgroundTint="@color/login_bgcolor"
        android:inputType="text"
        android:background="@color/signup_bgcolor"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/Email_address"
        android:layout_width="200dp"
        android:backgroundTint="@color/login_bgcolor"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Full_name"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Signup_email_address"
        android:inputType="text"
        android:background="@color/signup_bgcolor"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/login_bgcolor"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Email_address"
        android:layout_centerHorizontal="true"
        android:hint="@string/Signup_user_name"
        android:inputType="text"
        android:background="@color/signup_bgcolor"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/pass_word"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/login_bgcolor"
        android:hint="@string/Signup_pass"
        android:inputType="text"
        android:background="@color/signup_bgcolor"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_below="@id/pass_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/login_input_color"
        android:text="@string/Signup_btn"
        android:textStyle="italic"
        android:textColor="@color/black"/>



</RelativeLayout>
