<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/login_bgcolor">

    <EditText
        android:id="@+id/loginpage_username"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/login_input_color"
        android:inputType="text"
        android:hint="@string/login_username"
        android:layout_height="35dp"/>

    <EditText
        android:id="@+id/loginpage_passwd"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@id/loginpage_username"
        android:layout_marginTop="20dp"
        android:background="@color/login_input_color"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_next"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginpage_passwd"
        android:layout_marginTop="15dp"
        android:text="@string/login_next_btn"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_height="50dp"/>


</RelativeLayout>